# xdggs-dggrid4py

./: CITATION.cff  environment.yml  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/contribute_to_xdggs_dggrid4py/: index.rst
docs/source/reference_guide/: index.rst
docs/source/tutorials/: demo_xdggs-dggrid4py.ipynb  igeo7.ipynb
example/: IGEO7_example.ipynb
xdggs-dggrid4py/: IGEO7.py
xdggs_dggrid4py/: IGEO7.py  __init__.py  index.py  monotonic_index.py  regridding.py  regriding.py  utils.py
xdggs_dggrid4py/dependences/: grids.py
xdggs_dggrid4py/dependences/zoneid_indexing/: igeo7.py
xdggs_dggrid4py/regridding/: __init__.py  regridding.py
xdggs_dggrid4py/regridding/methods/: __init__.py
xdggs_dggrid4py/regridding/methods/centroid_based/: __init__.py  centerpoint.py  nearestcentroid.py  nearestpoint.py
xdggs_dggrid4py/regridding/methods/point_based/: nearestpoint.py
xdggs_dggrid4py/regridding_methods/: nearestpoint.py
xdggs_dggrid4py/regriding_methods/: centerpoint.py  nearestpoint.py
xdggs_dggrid4py/zoneid_indexing/: igeo7.py
z7_neighbourhood_testing/: find_neighbours.py  z7string_neighbours_draft_notebook.ipynb  z7string_neighbours_testing.ipynb
