[tool.poetry]
name = "xdggs-dggrid4py"
version = "1.0.0-alpha"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dggrid4py = "0.3.2"
rasterio = "^1.4.3"
rioxarray = "^0.18.1"
scipy = "^1.15.1"
xdggs = "^0.2.0"
shapely = "^2.0.7"
tqdm = "^4.67.1"
numpy = "^1.24.1"
dask = "^2025.2.0"
zarr = "2.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
