[tool.poetry]
name = "xdggs-dggrid4py"
version = "0.1.3"
description = "A plugin for Xarray-xdggs that implements DGGRID as DGGS provider"
authors = ["Wai Tik Chan <wai.tik.chan@ut.ee>", "Alexander Kmoch <alexander.kmoch@ut.ee>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dggrid4py = "~0.5.2"
xarray = {extras = ["io"], version = "^2025.1.2"}
rasterio = "^1.4.3"
rioxarray = "^0.18.1"
shapely = "^2.0.7"
dask = "^2025.2.0"
zarr = "2.18.3"
numcodecs = "^0.15.0"
xdggs = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
